VoucherService 생성 및 조회 로직 개선